--- a/SourceCode_Exercise/CourtCounter/app/src/main/res/layout/activity_main.xml
+++ b/SourceCode_Exercise/CourtCounter/app/src/main/res/layout/activity_main.xml
@@ -118,14 +118,6 @@
                 android:onClick="addTwoForTeamB"
                 android:text="+2 Points" />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="24dp"
-                android:layout_marginRight="24dp"
-                android:onClick="addOneForTeamB"
-                android:text="Free Throw" />
         </LinearLayout>
 
     </LinearLayout>
@@ -139,6 +131,19 @@
         android:layout_marginLeft="22dp"
         android:layout_marginRight="22dp"
         android:onClick="resetScore"
-        android:text="Reset" />
+        android:text="Reset"
+        android:id="@+id/button" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/button"
+        android:layout_alignTop="@+id/button"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="32dp"
+        android:onClick="addOneForTeamB"
+        android:text="Free Throw" />
 
 </RelativeLayout>
